# patient-input-output-recorder

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  index.html  index.js  langTexts.json  lang_texts.json  pyproject.toml  requirements.txt  script.js  styles.css  supported_languages.json
.github/workflows/: lint.yml
backend/: change_account_password.py  clear_data.py  constants.py  db.py  del_account.py  fetch_account.py  fetch_all_accounts.py  fetch_monitoring_accounts_record.py  gen_qr_code.py  main.py  monitor_account.py  sign_up.py  sign_up_monitor.py  update_account_password.py  update_server_code.py
monitor/: events.json  index.html  manifest.json  script.js  styles.css
patient/: events.json  index.html  lang_texts.json  manifest.json  script.js  styles.css  supported_languages.json
