[tool.poetry]
name = "patient-diet-recorder"
version = "0.4.0"
description = ""
authors = ["lifeadventurer <life0adventurer@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
qrcode = "^7.4.2"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"