[tool.poetry]
name = "patient-input-output-recorder"
version = "0.5.1"
description = ""
authors = ["lifeadventurer <life0adventurer@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.110.3"
qrcode = "^7.4.2"
pillow = "^10.3.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
